init params sets

--- a/clip/clip.html
+++ b/clip/clip.html
@@ -4,7 +4,7 @@
     <div>
       <div class="title">Running</div>
       <div class="img">
-        <img src="assets/shoe1.png" />
+        <img src="https://drive.google.com/uc?id=1uMxkSQPUXSRtUrikEimM1vYpGeXWsPPN" />
       </div>
     </div>
   </div>
@@ -12,7 +12,7 @@
     <div>
       <div class="title">Street</div>
       <div class="img">
-        <img src="assets/shoe2.png" />
+        <img src="https://drive.google.com/uc?id=1zW22avenkuJiqFFRDBf8ZCQ5f_B7g0SP" />
       </div>
     </div>
   </div>
@@ -20,7 +20,7 @@
     <div>
       <div class="title">Casual</div>
       <div class="img">
-        <img src="assets/shoe3.png" />
+        <img src="https://drive.google.com/uc?id=1PrAX_gXRG-BDb6cBAPedMdep5KuuevMN" />
       </div>
     </div>
   </div>
